修复反向下标